--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/jsoup-1.10.3/jsoup-1.10.3.jar')
     compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-v13:25.3.1'
 }
